--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <p class="description">An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
 
     <div class="time-block">
-      <h3 class="time-heading">Preparation time</h3>
+      <p class="time-heading">Preparation time</p>
       <ul class="time-list">
         <li><span><strong>Total:</strong> Approximately 10 minutes</span></li>
         <li><span><strong>Preparation:</strong> 5 minutes</span></li>
